# templates

./: Makefile  README.md  pyproject.toml  setup.py
python/base/: Makefile  pyproject.toml
python/base/base/: app.py
templates/python/base/: .mise.toml  setup.py
