[project]
name = "tetty"
version = "0.1.0"
description = "juciy lil tetris homage"
# Anything declared elsewhere and not in this file goes here.
dynamic = [
  "authors",
  "optional-dependencies",
  "entry-points",
  "requires-python"
]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]  # ruff is drop in replacement for black
# Source Config: https://github.com/astral-sh/ruff/blob/main/docs/configuration.md

line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = ["mypy_pytest"]
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest]
testpaths = ["tests"]

